--- a/login.css
+++ b/login.css
@@ -49,6 +49,7 @@ body{
 	width: 20%;
     text-align: center;
     float: left;
+    color: green;
 }
 .content-1 .googleAutoLogin .bt{
 
@@ -59,5 +60,32 @@ body{
     font-size: 30px;
 }
 .content-2 input{
-	display: block;
+    width: 70%;
+    height: 25px;
+    background: transparent;
+    padding: 6px 0px 6px 6px;
+    border-right: 1px solid #444;
+    border-top: 1px solid #444;
+    border-bottom: 1px solid #444;
+    border-radius: 5px;
+}
+
+/* form code */
+.f-wrap{
+	margin: 10px 0px;
+}
+.f-wrap div{
+    float: left;
+    width: 10%;
+    text-align: center;
+    height: 25px;
+    background: transparent;
+    border: 1px solid #333;
+    position: relative;
+    padding: 6px 0px 6px 6px;
+    border-radius: 5px;
+    border-collapse: collapse;
+}
+.f-wrap .f-wrap-in{
+
 }
