--- a/login.css
+++ b/login.css
@@ -8,6 +8,14 @@
 	margin: 0;
 	padding: 0;
 }
+a{
+	text-decoration: none;
+	color: #1B8EB7;
+}
+a:hover{
+	cursor: pointer;
+	text-decoration: underline;
+}
 body{
 	width: 100%;
 	height: auto;
@@ -16,17 +24,19 @@ body{
 .border_down{
 	border-bottom: 1px solid #333;
 }
-
+button:hover{
+	cursor: pointer;
+}
 /* Main Css*/
 #loginTab{
 	width: 100%;
 	height: auto;
 }
 .wrapper{
-    width: 35%;
+    width: 28%;
     height: auto;
     margin: 0 auto;
-    background-color: #f7f4f4;
+    background-color: #fff;
     padding: 20px 30px;
 }
 
@@ -40,24 +50,134 @@ body{
 }
 .content-1 .googleAutoLogin {
     text-align: center;
-    border: 1px solid #444;
-    padding: 10px 0px;
+    border: 1px solid #4285F4;
     margin: 10px auto;
     width: 50%;
+    overflow: hidden;
 }
+/*.content-1 .googleAutoLogin_sub {
+ 
+}*/
 .content-1 .googleAutoLogin .ic{
 	width: 20%;
     text-align: center;
     float: left;
+    position: relative;
+    padding-top: 10px;
 }
-.content-1 .googleAutoLogin .bt{
+.content-1 .googleAutoLogin .ic2{
+    float: left;
+    width: 20%;
+    height: 100%;
+    font-size: 27px;
+    color: #fff;
+    background-color: #4267B2;
+}
+.content-1 .googleAutoLogin .ic2 span{
 
 }
+.content-1 .googleAutoLogin .bt{
+    background-color: #4285F4;
+    float: right;
+    width: 80%;
+    padding: 10px 0px;
+    font-size: 18px;
+    color: #fff;
+}
+/* fb */
+.fb-set{
+    background-color: #4267B2;
+    width: 50%;
+    margin: 0 auto;
+}
+
+
+
+
+
 /* Content - 2 */
 .content-2 h1 {
     text-align: center;
     font-size: 30px;
 }
-.content-2 input{
-	display: block;
+.content-2 input[type=text],.content-2 input[type=password]{
+	width: 80%;
+	height: 30px;
+	padding: 6px 0px 6px 6px;
+	border-radius: 0px 1px 1px 0px;
+	border-right: 1px solid #c2cfd6;
+	border-top: 1px solid #c2cfd6;
+	border-bottom: 1px solid #c2cfd6;
+	border-left: transparent;
+	transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.content-2 input[type=submit]{
+	text-align: center;
+    padding: 12px 75px;
+    background-color: #20a8d8;
+    border: none;
+    color: #fff;
+    font-size: 20px;
+}
+.content-2 input[type=submit]:hover{
+    background-color: #1B8EB7;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+/* form code */
+.f-wrap{
+	margin: 25px 0px 8px 0px;
+}
+.f-wrap div{
+    float: left;
+	width: 10%;
+	text-align: center;
+	height: 30px;
+	position: relative;
+	padding: 6px 0px 6px 6px;
+	border-radius: 1px 0px 0px 1px;
+	background: #F0F3F5;
+	border-left: 1px solid #c2cfd6;
+	border-top: 1px solid #c2cfd6;
+	border-bottom: 1px solid #c2cfd6;
+}
+.f-wrap div{
+	position: relative !important;
+}
+.f-wrap div span{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
+}
+
+/* foot */
+.w100{
+	width: 100%;
+	overflow: hidden;
+}
+.wl{
+	float: left;
+	width: 50%;
+}
+.wr{
+	float: right;
+	width: 50%;
+}
+.wl20{
+	float: left;
+	width: 200%;
+}
+.wr80{
+	float: right;
+	width: 80%;
+}
+.wr a{
+	float: right;
 }
