--- a/login.css
+++ b/login.css
@@ -47,12 +47,13 @@ button:hover{
 .content-1 h1 {
     text-align: center;
     font-size: 30px;
+    letter-spacing: -0.9999px;
 }
 .content-1 .googleAutoLogin {
     text-align: center;
     border: 1px solid #4285F4;
     margin: 10px auto;
-    width: 50%;
+    width: 60%;
     overflow: hidden;
 }
 /*.content-1 .googleAutoLogin_sub {
@@ -83,15 +84,15 @@ button:hover{
     padding: 10px 0px;
     font-size: 18px;
     color: #fff;
+    letter-spacing: -0.9px;
 }
 /* fb */
 .fb-set{
     background-color: #4267B2;
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
+    border-radius: 3px;
 }
-
-
 
 
 
@@ -142,6 +143,7 @@ button:hover{
     border-left: 1px solid #c2cfd6;
     border-top: 1px solid #c2cfd6;
     border-bottom: 1px solid #c2cfd6;
+    border-right: 1px solid #c2cfd6;
 }
 .f-wrap div{
     position: relative !important;
@@ -172,12 +174,162 @@ button:hover{
 }
 .wl20{
     float: left;
-    width: 200%;
+    width: 20%;
+    padding: 4px 0 0 0;
+}
+.wl20 div{
+    font-size: 30px;
+    padding: 0px 11px;
+    color: #fff;
 }
 .wr80{
     float: right;
     width: 80%;
+    padding: 10px 0px;
+    font-size: 18px;
+    text-align: center;
 }
 .wr a{
     float: right;
+}
+
+/* 320 Media Query */
+@media (min-width:240px) and (max-width:320px){
+
+.wrapper {
+    width: 80%;
+    padding: 25px 20px;
+}
+.content-1 h1 {
+    font-size: 20px;
+}
+.content-1 .googleAutoLogin {
+    width: 100%;
+}
+.fb-set {
+    width: 100%;
+}
+.content-2 h1 {
+    font-size: 19px;
+}
+.wl,.wr{
+    font-size: 12px;
+}
+/* end 320 */  
+}
+
+/* 480 Media Query */
+@media (min-width:321px) and (max-width:480px){
+
+.wrapper {
+    width: 65%;
+    padding: 25px 20px;
+}
+.content-1 h1 {
+    font-size: 18px;
+}
+.content-1 .googleAutoLogin {
+    width: 85%;
+}
+.fb-set {
+    width: 85%;
+}
+.content-2 h1 {
+    font-size: 16px;
+}
+.wr80{
+    font-size: 14px;
+}
+.wl,.wr{
+    font-size: 12px;
+}
+/* end 480 */  
+}
+
+/* 990 Media Query */
+@media (min-width:481px) and (max-width:660px){
+
+.wrapper {
+    width: 40%;
+    padding: 25px 20px;
+}
+.content-1 h1 {
+    font-size: 18px;
+}
+.content-1 .googleAutoLogin {
+    width: 100%;
+}
+.fb-set {
+    width: 100%;
+}
+.content-2 h1 {
+    font-size: 18px;
+}
+.wr80 {
+    font-size: 14px;
+}
+.content-2 input[type=submit] {
+    padding: 10px 50px;
+}
+.wl,.wr{
+    font-size: 12px;
+}
+/* end 660 */  
+}
+
+/* 850 Media Query */
+@media (min-width:660px) and (max-width:850px){
+
+.wrapper {
+    width: 55%;
+    padding: 25px 20px;
+}
+.content-1 h1 {
+    font-size: 22px;
+}
+.content-1 .googleAutoLogin {
+    width: 60%;
+}
+.fb-set {
+    width: 60%;
+}
+.content-2 h1 {
+    font-size: 19px;
+}
+/* end 850 */  
+}
+
+
+
+/* 990 Media Query */
+@media (min-width:851px) and (max-width:990px){
+
+.wrapper {
+    width: 40%;
+    padding: 25px 20px;
+}
+.content-1 h1 {
+    font-size: 22px;
+}
+.content-1 .googleAutoLogin {
+    width: 60%;
+}
+.fb-set {
+    width: 60%;
+}
+.content-2 h1 {
+    font-size: 19px;
+}
+.wr80 {
+    font-size: 17px;
+}
+/* end 990 */  
+}
+
+/* 1230 Media Query */
+@media (min-width:990px) and (max-width:1230px){
+.wrapper {
+    width: 40%;
+}
+/* end 1230 */  
 }
